--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/about.css">
   <link rel="stylesheet" href="styles/services.css">
   <link rel="stylesheet" href="styles/choose-us.css">
+  <link rel="stylesheet" href="styles/process.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
 </head>
 <body>
@@ -154,6 +155,48 @@
       <p>Transparent processes and regular updates throughout your project.</p>
     </div>
   </div>
+
+  <!-- --------------------------------------------------------------------------------------------------------------------- -->
+
+  <div class="our-process">
+    <div class="header-process">
+      <h2>Our Process</h2>
+      <p>A proven methodology for delivering exceptional results</p>
+    </div> 
+
+    <div class="process">
+      <div class="num">01</div>
+      <h3>Discover</h3>
+      <p>Understanding your goals and audience</p>
+    </div>
+
+    <div class="process">
+      <div class="num">02</div>
+      <h3>Design</h3>
+      <p>Crafting the perfect user experience</p>
+    </div>
+
+    <div class="process">
+      <div class="num">03</div>
+      <h3>Build</h3>
+      <p>Developing with precision and care</p>
+    </div>
+
+    <div class="process">
+      <div class="num">04</div>
+      <h3>Launch</h3>
+      <p>Deploying your solution seamlessly</p>
+    </div>
+
+    <div class="process">
+      <div class="num">05</div>
+      <h3>Support</h3>
+      <p>Ongoing optimization and maintenance</p>
+    </div>
+
+    <span class="timeline"></span>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
